# hapi

./: .gitignore  CMakeLists.txt  README.md  index.html  last.tiff  trigger_setup.xlsx
datasheets/OBIS-SDR-Cable-Drawing-ZIP-1/: OBIS SDR Cable.EPRT  notes.txt
include/: argparse.h  board.h  config.h  filesystem.hpp  logger.h  obis.h  serial.h  usb_camera.h
include/routines/: acquisition.h  get_config.h  is_root.h  os_utils.h  pmt_calibrate.h  str_utils.h
laser_board/laser_board/: fp-lib-table  laser_board.bak  laser_board.kicad_pcb  laser_board.kicad_pcb-bak  laser_board.net  laser_board.sch  sym-lib-table
laser_board/laser_board/hapi.pretty/: 3mtm-shrunk-delta-ribbon-sdr-connectors-122-series-ts2124.kicad_mod  te_conn_bnc_1634503.kicad_mod
power_board/power_board/: power_board.bak  power_board.cir  power_board.kicad_pcb  power_board.kicad_pcb-bak  power_board.net  power_board.sch
power_board/power_board/.pretty/: amphenol_term_block_hdr_2pos_vert_3.81mm.kicad_mod
src/: board.cpp  config.cpp  logger.cpp  main.cpp  obis.cpp  serial.cpp  usb_camera.cpp
src/routines/: acquisition.cpp  get_config.cpp  is_root.cpp  os_utils.cpp  pmt_calibrate.cpp  str_utils.cpp
tools/config/src/: main.cpp
tools/mview/: mview.py
tools/pmt_calibrate/src/: main.cpp
tools/setup/: hapiweb  index.html  setup.sh  setup_raspbian.sh  setup_ubuntu.sh
